// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the unpressed ChangingIconButton matches the snapshot 1`] = `
<button
  aria-label="RadioButton"
  aria-pressed={false}
  className="sc-bdVaJa kpialo"
  onClick={[Function]}
>
  <svg
    aria-hidden="true"
    className="sc-bwzfXH fwYRJu"
    focusable="false"
    role="img"
  />
</button>
`;

exports[`the unpressed ChangingIconButton matches the snapshot 2`] = `
<button
  aria-label="RadioButton2"
  aria-pressed={true}
  className="sc-bdVaJa lakVWV"
  onClick={[Function]}
>
  <svg
    aria-hidden="true"
    className="sc-htpNat hKTWVO"
    focusable="false"
    role="img"
  />
</button>
`;
